--- a/Blog.Admin/Views/Domain/Create.cshtml
+++ b/Blog.Admin/Views/Domain/Create.cshtml
@@ -17,6 +17,7 @@
                     <div class="mt-1 sm:col-span-2 sm:mt-0">
                         <input type="text" asp-for="Name" id="name" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm">
                     </div>
+                    <span asp-validation-for="Name" class="mt-2 text-sm text-red-600" id="name-error"></span>
                 </div>
             </div>
         </div>
