--- a/Blog.Admin/Views/Domain/EditTopic.cshtml
+++ b/Blog.Admin/Views/Domain/EditTopic.cshtml
@@ -1,15 +1,14 @@
-@model Blog.Admin.Models.EditDomainViewModel
+@model EditTopicViewModel
 
 @{
-    ViewBag.Title = "title";
     Layout = "_LeveledLayout";
 }
 
-<form class="space-y-8 divide-y divide-gray-200 mt-4" method="post" asp-action="Edit" asp-route-id="@Model.Id">
+<form class="space-y-8 divide-y divide-gray-200 mt-4" method="post">
     <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
         <div class="space-y-6 sm:space-y-5">
             <div>
-                <h3 class="text-lg font-medium leading-6 text-gray-900">Domain Information</h3>
+                <h3 class="text-lg font-medium leading-6 text-gray-900">Topic Information</h3>
                 <p class="mt-1 max-w-2xl text-sm text-gray-500">Basic Info</p>
             </div>
             <div class="space-y-6 sm:space-y-5">
@@ -26,7 +25,7 @@
     <div class="pt-5">
         <div class="flex justify-end">
             <button type="button" onclick="history.back()" class="rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Back</button>
-            <button type="submit" class="ml-3 inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Update</button>
+            <button type="submit" class="ml-3 inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Create</button>
         </div>
     </div>
 </form>
