--- a/Blog.Admin/Views/Domain/AddCategory.cshtml
+++ b/Blog.Admin/Views/Domain/AddCategory.cshtml
@@ -5,7 +5,7 @@
     Layout = "_LeveledLayout";
 }
 
-<form class="space-y-8 divide-y divide-gray-200 mt-4" method="post" asp-action="AddCategory" asp-controller="Domain" asp-route-id="@(Model.DomainId)">
+<form class="space-y-8 divide-y divide-gray-200 mt-4" method="post">
     <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
         <div class="space-y-6 sm:space-y-5">
             <div>
