feat: update domain

--- a/Blog.Admin/Views/Post/Create.cshtml
+++ b/Blog.Admin/Views/Post/Create.cshtml
@@ -97,6 +97,17 @@
                     </select>
                 </div>
             </div>
+
+            <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
+                <label for="category" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Language</label>
+                <div class="mt-1 sm:col-span-2 sm:mt-0">
+                    <select id="language" name="country" autocomplete="country-name" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm">
+                        <option>United States</option>
+                        <option>Canada</option>
+                        <option>Mexico</option>
+                    </select>
+                </div>
+            </div>
         </div>
     </div>
     <div class="pt-5">
