--- a/Blog.Admin/Views/Account/_AuthenticationLayout.cshtml
+++ b/Blog.Admin/Views/Account/_AuthenticationLayout.cshtml
@@ -2,7 +2,7 @@
     Layout = "_Layout";
 }
 
-<div class="flex min-h-full flex-col justify-center py-12 sm:px-6 lg:px-8">
+<div class="flex min-h-full flex-col justify-center py-12 sm:px-6 lg:px-8 bg-gray-100">
     <div class="sm:mx-auto sm:w-full sm:max-w-md">
         <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
         <h2 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-900">@ViewData["Title"]</h2>
