--- a/Blog.Admin/Views/Domain/Index.cshtml
+++ b/Blog.Admin/Views/Domain/Index.cshtml
@@ -1,245 +1,84 @@
-@model Blog.Admin.Models.DomainDetailViewModel
+@model Blog.Admin.Models.DomainViewModel
 
 @{
-    Layout = "_LeveledLayout";
+    Layout = "_Layout2";
 }
 
 
-<div x-data="modalData">
-    <div class="mt-4">
+<div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+    <div class="pt-4">
         <div class="sm:flex sm:items-center">
             <div class="sm:flex-auto">
-                <h1 class="text-lg font-medium leading-6 text-gray-900">Domain Information</h1>
-                <p class="mt-1 max-w-2xl text-sm text-gray-500">BASIC_INFO_DESCRIPTION</p>
+                <h1 class="text-2xl font-semibold text-gray-900">Domains</h1>
+                <p class="mt-2 text-sm text-gray-700">A list of all the domains in system</p>
             </div>
             <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
-                <a asp-action="Edit" asp-controller="Domain" asp-route-id="@(Model.Domain.Id)" class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">Edit</a>
+                <a asp-controller="Domain" asp-action="Create" class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">Add domain</a>
             </div>
         </div>
-        <div class="mt-5 border-t border-gray-200">
-            <dl class="sm:divide-y sm:divide-gray-200">
-                <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5">
-                    <dt class="text-sm font-medium text-gray-500">Name</dt>
-                    <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">@Model.Domain.Name</dd>
-                </div>
-            </dl>
-        </div>
-    </div>
+        <div class="mt-8 flex flex-col">
+            <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+                    @if (Model.Domains.Count > 0)
+                    {
+                        <table class="min-w-full divide-y divide-gray-300">
+                            <thead>
+                            <tr>
+                                <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6 md:pl-0">Name</th>
+                                <th scope="col" class="py-3.5 px-3 text-left text-sm font-semibold text-gray-900">User Default</th>
+                                <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6 md:pr-0">
+                                    <span class="sr-only">Edit</span>
+                                    <span class="sr-only">Delete</span>
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody class="divide-y divide-gray-200">
 
-
-    <div class="mt-8">
-
-        <div class="sm:flex sm:items-center">
-            <div class="sm:flex-auto">
-                <h1 class="text-lg font-medium leading-6 text-gray-900">Topics</h1>
-                <p class="mt-1 max-w-2xl text-sm text-gray-500">DOMAIN_DESCRIPTION</p>
-            </div>
-            <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
-                <a asp-action="AddTopic" asp-route-id="@Model.Domain.Id" class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">Add Topic</a>
-            </div>
-        </div>
-        <div class="px-4 sm:px-6 lg:px-8">
-            <div class="mt-8 flex flex-col">
-                <div class="-my-2 -mx-4 sm:-mx-6 lg:-mx-8">
-                    <div class="inline-block min-w-full py-2 align-middle">
-                        <div class="shadow-sm ring-1 ring-black ring-opacity-5">
-                            <table class="min-w-full border-separate" style="border-spacing: 0">
-                                <thead class="bg-gray-50">
+                            @for (var i = 0; i < Model.Domains.Count; i++)
+                            {
+                                var domain = Model.Domains[i];
                                 <tr>
-                                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-gray-50 bg-opacity-75 py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8">Name</th>
-                                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-gray-50 bg-opacity-75 py-3.5 pr-4 pl-3 backdrop-blur backdrop-filter sm:pr-6 lg:pr-8">
-                                        <span class="sr-only">Edit</span>
-                                        <span class="sr-only">Delete</span>
-                                    </th>
-                                </tr>
-                                </thead>
-                                <tbody class="bg-white">
-                                @foreach (var topic in Model.Domain.Topics)
-                                {
-                                    <tr>
-                                        <td class="whitespace-nowrap border-b border-gray-200 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">@topic.Name</td>
-                                        <td class="relative whitespace-nowrap border-b border-gray-200 py-4 pr-4 pl-3 text-right text-sm font-medium sm:pr-6 lg:pr-8">
-                                            <form method="post" id="delete-topic-@topic.Id" asp-action="DeleteTopic" asp-route-id="@Model.Domain.Id">
-                                                <input type="hidden" name="topicId" value="@topic.Id"/>
+                                    <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 md:pl-0">
+                                        <a asp-controller="Post" asp-action="Index" asp-route-domainId="@domain.Id">@domain.Name</a>
+                                    </td>
+                                    @if (Model.DefaultDomain == domain.Id)
+                                    {
+                                        <td class="whitespace-nowrap py-4 px-3 text-sm text-gray-500">is default</td>
+                                    }
+                                    else
+                                    {
+                                        <td class="whitespace-nowrap py-4 px-3 text-sm text-gray-500">
+                                            <form method="POST" asp-action="SetDefaultDomain" asp-controller="Domain">
+                                                <input type="hidden" name="id" value="@domain.Id"/>
+                                                <button type="submit" class="text-indigo-600 hover:text-indigo-900">Set Default</button>
                                             </form>
-                                            <a asp-action="EditTopic" asp-route-id="@Model.Domain.Id" asp-route-topicId="@topic.Id" class="text-indigo-600 hover:text-indigo-900 mr-1">Edit</a>
-                                            <button x-on:click="popUpDeleteTopic('@topic.Id', '@topic.Name')" class="text-indigo-600 hover:text-indigo-900">Delete</button>
                                         </td>
-                                    </tr>
-                                }
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="mt-8">
-        <div class="sm:flex sm:items-center">
-            <div class="sm:flex-auto">
-                <h1 class="text-lg font-medium leading-6 text-gray-900">Categories</h1>
-                <p class="mt-1 max-w-2xl text-sm text-gray-500">DOMAIN_DESCRIPTION</p>
-            </div>
-            <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
-                <a asp-action="AddCategory" asp-route-id="@Model.Domain.Id" class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto">Add Category</a>
-            </div>
-        </div>
-        <div class="px-4 sm:px-6 lg:px-8">
-            <div class="mt-8 flex flex-col">
-                <div class="-my-2 -mx-4 sm:-mx-6 lg:-mx-8">
-                    <div class="inline-block min-w-full py-2 align-middle">
-                        <div class="shadow-sm ring-1 ring-black ring-opacity-5">
-                            <table class="min-w-full border-separate" style="border-spacing: 0">
-                                <thead class="bg-gray-50">
-                                <tr>
-                                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-gray-50 bg-opacity-75 py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8">Name</th>
-                                    <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-gray-50 bg-opacity-75 py-3.5 pr-4 pl-3 backdrop-blur backdrop-filter sm:pr-6 lg:pr-8">
-                                        <span class="sr-only">Edit</span>
-                                        <span class="sr-only">Delete</span>
-                                    </th>
+                                    }
+                                    <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6 md:pr-0">
+                                        <a asp-action="Edit" asp-route-id="@domain.Id" class="text-indigo-600 hover:text-indigo-900">Edit</a>
+                                        <form id="delete-domain-form-@domain.Id" method="POST" asp-action="DeleteDomain" asp-controller="Domain">
+                                            <input type="hidden" name="id" value="@domain.Id"/>
+                                        </form>
+                                        <button x-on:click="popUpDanger('Delete domain confirm', 'are you sure you want to delete the domain of @domain.Name (@domain.Id)?', 'Cancel', 'Delete', '#delete-domain-form-@domain.Id')" class="text-indigo-600 hover:text-indigo-900">Delete</button>
+                                    </td>
                                 </tr>
-                                </thead>
-                                <tbody class="bg-white">
-                                @foreach (var category in Model.Domain.Categories)
-                                {
-                                    <tr>
-                                        <td class="whitespace-nowrap border-b border-gray-200 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">@category.Name</td>
-                                        <td class="relative whitespace-nowrap border-b border-gray-200 py-4 pr-4 pl-3 text-right text-sm font-medium sm:pr-6 lg:pr-8">
-                                            <form method="post" id="delete-category-@category.Id" asp-action="DeleteCategory" asp-route-id="@Model.Domain.Id">
-                                                <input type="hidden" name="categoryId" value="@category.Id"/>
-                                            </form>
-                                            <a asp-action="EditCategory" asp-route-id="@Model.Domain.Id" asp-route-categoryId="@category.Id" class="text-indigo-600 hover:text-indigo-900 mr-1">Edit</a>
-                                            <button x-on:click="popUpDeleteCategory('@category.Id', '@category.Name')" class="text-indigo-600 hover:text-indigo-900">Delete</button>
-                                        </td>
-                                    </tr>
-                                }
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div x-show="showModal" style="display: none" class="relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true">
-        <!--
-        Background backdrop, show/hide based on modal state.
-    
-        Entering: "ease-out duration-300"
-        From: "opacity-0"
-        To: "opacity-100"
-        Leaving: "ease-in duration-200"
-        From: "opacity-100"
-        To: "opacity-0"
-        -->
-        <div
-            x-show="showModal"
-            x-transition:enter="ease-out duration-300"
-            x-transition:enter-start="opacity-0"
-            x-transition:enter-end="opacity-100"
-            x-transition:leave="ease-in duration-200"
-            x-transition:leave-start="opacity-100"
-            x-transition:leave-end="opacity-0"
-            class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity">
-        </div>
-
-        <div class="fixed inset-0 z-10 overflow-y-auto">
-            <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
-                <!--
-                Modal panel, show/hide based on modal state.
-    
-                Entering: "ease-out duration-300"
-                From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                To: "opacity-100 translate-y-0 sm:scale-100"
-                Leaving: "ease-in duration-200"
-                From: "opacity-100 translate-y-0 sm:scale-100"
-                To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                -->
-                <div
-                    x-show="showModal"
-                    x-transition:enter="ease-out duration-300"
-                    x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                    x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
-                    x-transition:leave="ease-in duration-200"
-                    x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
-                    x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                    class="relative transform overflow-hidden rounded-lg bg-white px-4 pt-5 pb-4 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg sm:p-6">
-                    <div class="sm:flex sm:items-start">
-                        <div class="mx-auto flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
-                            <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z"/>
-                            </svg>
-                        </div>
-                        <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-                            <h3 x-text="modal?.title" class="text-lg font-medium leading-6 text-gray-900" id="modal-title"></h3>
-                            <div class="mt-2">
-                                <p x-text="modal?.message" class="text-sm text-gray-500"></p>
+                            }
+                            </tbody>
+                        </table>
+                    }
+                    else
+                    {
+                        <div class="px-4 sm:px-6 md:px-0 cursor-default">
+                            <div class="relative block w-full h-48 rounded-lg border-2 border-dashed border-gray-300 p-12 text-center focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+                                <svg class="mx-auto h-12 w-12 text-gray-400" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 14v20c0 4.418 7.163 8 16 8 1.381 0 2.721-.087 4-.252M8 14c0 4.418 7.163 8 16 8s16-3.582 16-8M8 14c0-4.418 7.163-8 16-8s16 3.582 16 8m0 0v14m0-4c0 4.418-7.163 8-16 8S8 28.418 8 24m32 10v6m0 0v6m0-6h6m-6 0h-6"/>
+                                </svg>
+                                <span class="mt-2 block text-sm font-medium text-gray-900">There is no Domain</span>
                             </div>
                         </div>
-                    </div>
-                    <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
-                        <button x-on:click="modal?.confirmAction()" x-text="modal?.confirmText" type="button" class="inline-flex w-full justify-center rounded-md border border-transparent bg-red-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 sm:ml-3 sm:w-auto sm:text-sm">Deactivate</button>
-                        <button x-on:click="closeModal()" x-text="modal?.cancelText" type="button" class="mt-3 inline-flex w-full justify-center rounded-md border border-gray-300 bg-white px-4 py-2 text-base font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:w-auto sm:text-sm">Cancel</button>
-                    </div>
+                    }
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-@section Scripts {
-    <script>
-        document.addEventListener('alpine:init', () => {
-          Alpine.data('modalData', () => ({
-            showModal: false,
-            modal: null,
-            addModal(title, message, cancelText, confirmText, confirmAction) {
-              this.modal = {
-                title: title, 
-                message: message, 
-                cancelText: cancelText,
-                confirmText: confirmText,
-                confirmAction: confirmAction
-              }
-            },
-            closeModal() {
-              this.showModal = false; 
-            },
-            doConfirm() {
-              if (this.modal == null) return;
-              this.modal.confirmAction()
-            },
-            popUpDeleteTopic(topicId, topicName) {
-              this.addModal(
-                `Delete Topic ${topicName} (${topicId}) ?`,
-                `DELETE_MESSAGE`,
-                `Cancel`,
-                `Delete`,
-                () => {
-                  const form = document.querySelector(`#delete-topic-${topicId}`);
-                  form.submit();
-                }
-              )
-              this.showModal = true;
-            },
-            popUpDeleteCategory(categoryId, categoryName) {
-              this.addModal(
-                `Delete Category ${categoryName} (${categoryId}) ?`,
-                `DELETE_MESSAGE`,
-                `Cancel`,
-                `Delete`,
-                () => {
-                  const form = document.querySelector(`#delete-category-${categoryId}`);
-                  form.submit();
-                }
-              )
-              this.showModal = true;
-            }
-          }))
-        })
-    </script>
-}
