--- a/Blog.Admin/Views/Shared/_Layout.cshtml
+++ b/Blog.Admin/Views/Shared/_Layout.cshtml
@@ -1,15 +1,11 @@
-﻿@{
-}
-
-<!DOCTYPE html>
-<html lang="en" class="h-full bg-gray-100">
+﻿<!DOCTYPE html>
+<html lang="en" class="h-full bg-white">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/tailwindcss.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/Blog.Admin.styles.css" asp-append-version="true"/>
 </head>
 <body class="h-full">
 
